Tabs can now be themed

--- a/src/LangPad/Editors/CharacterEditor.resx
+++ b/src/LangPad/Editors/CharacterEditor.resx
@@ -146,50 +146,50 @@
   <data name="ExportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YaLZMJRBo
-        YF0GTHEilDp0gy1T4jXTRGeypm7xEhMbSdzawbZQRi/codLDaCntWEk5pCljGijh3httT29c32DwkV93
-        3As51B66lzzJJyfn5Jzneb6/c8kR7Gtf/5VMJjsoFlcfFYtrRE+LdyVnX2bt/18SyfljCkWj3O32jSwu
-        LtJp43bbZVd/+rGy8uKLbERylUvOFXm9vtGtrS1sbm6mDfFxjj3qlUhq3mAjkosUsNsduo2NDaytraUN
-        8enW9ynF4nPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+OEZ/uHoOCV4H79+06cvHy8jIv/EEGVdf1
-        +LCBgtM1nzhGfDq791BgZWUF8XicF75ACFVKCldpDyQKCj228USJPRUghtFolBcefwCVNyj86lrBtTEG
-        ZbcsUBhGoG3vusmzwLA2FoshEolworM6cUll3sEXjSYU11GQji/j49EYLjtjKG2yo1haP3a87KKIjUiu
-        xwVsWhLEMAwn3+msKNH9iap+zw7ODi7hMzqOcksEZ4ai+GQkjgI1vZX10W8DAtHnL7Axu4sUsFhs2nA4
-        jFAoxIlMa8Vb7TN4zxRBRT83b/eFE7xzL4wPzNHE+Vlfqh4cKvr2FTaKW6TAwMCQlkwaCAQ4kTYPokg9
-        jYreMMp+5+ZUN5OgtIeBhApDpHD+/fynKuuzxZdfYqO49XgFhjTBYBB+v5+TK3fNeF1OI1/5xw4Kb0+h
-        vCuMky0hnGrbfhC7QnhVTv91uFquF5z46jk2ZneRAmazVUMm9fl8nFDDD1HX+eAJ8lYLftaYcE1FQSjr
-        xGkdgxINgzfVAeT+MIiTXyvoovIaIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRBwqk7Th9l8GJm27kyXpR
-        12rCnSY1v9fQaDRryKRutzsl5ufnMTU1BdrhRMGVDuT94sJxaQfa7g1hdnYWTc0t/D5EfX1GDZlsYWEh
-        Zaanp+EYG0f+N62o+L4DZhuNiYmJRDm1tv0G7wL/TpYq5DZMTLpQp+2H4+EjuFyuRCnio2puuc6rgMFg
-        UpOpyPLxZWZmJhFMtmR/+6dkbwXIVMQkXcggKpWOX4Ht70DX0tISvF5v2hCftg79nVT/iA7m54tKqi/U
-        NjY0qAxKZYMxXerrb1Nn3j9/KzdXlNIKHMjMzMw6+lq2OCevsDY7R3gpXXJyCmuPHDlWmpGRcZjNSEkH
-        hELhM9vbQ08B4rOvfe0igeAfo9ZAhBqek6oAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMar0f0BvFhIzMaLJXuzxETjNgKB
+        TqwRcGOOQelkU9C4kem2uCXqEptOs0uWrBnJpBXUUKQX7tDRIi2lFUvKIV0RZ6CEe2+0Pb1xfcPCnvGr
+        Z74Yh66H+pIn+eTknJzzPM/3dy45vF3t6r+SSCR7hcKKw0JhpeBF8aHozBuM/f9LJDp3RCarl7pc3qH5
+        +XkqZVwum+TGTz+WlV14jYlIrBLR2XyPxzu8sbGB9fX1lCE+jpEn3SJR5dtMRGKRAjabXbO2toaVlZWU
+        IT6d2h65UHg2k4lILFLAaqU0q6urWF5e5kQ4GoNMO4g5b+D5MeLT2aWTcSrw8KFNQy5eXFzkhC9Ao/yW
+        Fp/W6eFwzsaPEZ/2zh0UWFpaQiwW44TXH0S5XI8blBsimR5d1tF4iR0VIIaRSIQTbp8fZTV6/Opcws0R
+        GsV3zJDphqBu7bjNscCgOhqNIhwOs6KxOHBZYdrCV/VGFFTrIR5dxOfDUVxzRFHUYEOBuHbkWPEFAROR
+        WM8KWNUkiKZpVr7TWFCoeYryXvcWzvQv4AsqhhJzGKcHIrg4FMM7yqGNjM9+6+MJvnyVidlepIDZbFWH
+        QiEEg0FWJGoL3mudwkfGMEp72Xm/JxTngwchfGKKxM/P+FrxaH/+tweZKHaRAn19A2oyqd/vZ0Xc2I98
+        5SRKu0Mo/p2dk510nKIuGiJ9CIKaP/5+5ZLC8lLBtdeZKHY9W4EBVSAQgM/nY+X6fRPeklLIlf+5hby7
+        EyjpCOFEUxAnWzYfxI4gDkqpvw5USLW849+8zMRsL1LAZLKoyKRer5cV/eBjVLc/eo602YyfVUbcVOjB
+        l7TjlIZGoYrGu0o/sn/ox4krMiq/pJLPRCQWKWAwmFVkUrfbnRQzMzMYHx+HbdiOo+JWnLpP4/htF3Ik
+        3ahuNuJeg5Lba2gwmFRkUpfLlRSzs7OYmJgAZXfg6PU25PzixDFxG1oeDGB6ehoNjU3cPkQ9PQYVmWxu
+        bi5pJicnYR8ZRe7VZpR+3waTlcLY2Fi8nFLdWsO5wL+TJQu5DWPjTlSre2F//AROpzNeivgoGptucSqg
+        0xmVZCqyfFyZmpqKB5Mt2d/8KdlZATIVMUkVMohCoeFWYPM70LGwsACPx5MyxKelTXsv2T+ivbm5gsKK
+        81X1dXUKnVxeZ0iV2tq7+tMfn7uTnS1IagX2pKenZxx+M1OYlZNXlZnFv5wqWVl5VYcOHSlKS0s7wGQk
+        pT18Pn/f5nb/C4D47GpX24jH+wd5hEB/hVYOlgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="ClearLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMkQFEcfCYwyL22A6NW4shokJ
-        TieCmMlDpBQKBQUmvlBUpkYoAj4wSBfryEAZQiI6heAShm8cDxUYLxWlPCsVGKVgt7ZQ3t/d3/Jbsuyv
-        DdosWfwk3z9+uefcc87v3HtyyWv+V4AQg7RAQy+xYGaOWGCcJwokH7FL+icjkhidE8wqvrDTZrQwyRX3
-        xdxJccBs1Rk/Mps10S9ivvHpQuGSoUvClcOZUTZt1dnBSI800Yi4xvasif5ICyBLREGmg5Lr+/B1mJlc
-        FGL64tF5P5zgGw8wbWHN9MfZkJmXy9PWjbcXhCIvyk5TlOQ6mhfvNJzCMxOxJvpDJCDmZ4NNhpqvheLZ
-        hbVozPwMNd964CRvjvqE91wL1kx/pPgbBWXv56gbs9xQK1qG+m9cII6w0yT4W+xnTfTLqUDTG8VJTqhM
-        ccQjquydnLGjXMtaoZDMYE10T6GAfFJ+0j76frxlRDLPbLj0uCPKEqxwM84eB/xt1Pt9rTmsqX64Hkac
-        pRUCtbJNiJbbEZP1361A6TErHOPPGzroZxvMmukHDw8PgecGj7G9uwKRd56Hpio+VN0HoWjagbKLiwbv
-        xs2KvbqDmLLmuoWZdiE+awp9fTZNhIeHY+tWAXy8N2L3jg24ccUdrQ+8J0qSTHMKwsk7rIvuuMUnJmVJ
-        tqelpcG/3qEDJ+GIH3x9PcHl+oDP5yOA6wsvr3VaIZej+8lXvJsYlyctONXdeGR0QiXGSH80huWh6JOs
-        R2GuK8LD1sPbayOY1ri7u+s2AdDrVCK0ipU/iNJMqjMwoTyAUUUEhnq4GGhZS/Upep870xZ4I2Wb7WXW
-        TXfciHlzi7RMoJjQXMSkJgda+SFof+FDI9uEngYn9Dc7oefJQgy08VAhsqi4uoXMZF2nT0GEkZPkmmfz
-        uCqLBs/GkFxEKw/HYDcPr9oC0Pv0Y/Q9WwxZtTXkEnfU5Do2FvCJJes+Peiwsa/NWlkxokjHhPoctIpU
-        qGS7oO0JxFDvYfS3xdCrtwLd9QsgfTiPJrAeDVecnv+wjVixW0yd7/lkYdXZD37UdMahpyl6TCuPo8GP
-        YvAljwbfi99eHoaiRQB5oyOklZaQVnHQ1+KN+rzlTdNOIJdet/vHbC/Ka/zRUezW+/TKKqnq5Uko2wOg
-        7f2StiGOVrsViuZ16K6zhazWhX5H4FVnDCozHOqKg4gZu9XUyQ8lDg9T3yv66fiC612PD08qO7ZD0xVM
-        gydC2bEZitY96H3iANnP76KzhvneRxOIx61EkyLqPpdqDpUxlSHVlB4kBsc3kqUlKe8Xd9RtH1d3JWBY
-        kYj2Ik910z2vyf7WzeiqtUHXU1803VyFAelXkD+PwrUYg1TqyxxC5h0wj4oZybOo3qD6VzAPSQtnDlmc
-        u8fiTP0llxfND4LG76ZYNfdJYmn/3ekVdEFnlQ+q8peOKGXxkNxdPZjoSfyp39tUf03ChOrPv/GPYTJm
-        nK2pFm5eRj5P8zdKvp1sUyO5t2awqy4E3Y+3oTzdtqPu1hqVUhaHklTz6tUcsoj1eYtqPhXTDqYYZjZM
-        6X3AZM4kwmxovZIGOOJGvsiKnHEo/6BhZo7A4NSd5PmlFWK7hqywGTupDVO1OdXfz4FOYCowomI2Zapi
-        AjC/d47XcmK+5cM/+s2sT/ngveY/gJDfAaW3eKsWXri7AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvOkQFEcfCY0yL28DpNG4sRsXE
+        t4AYV0CkFArl6RDf+JgaoQgqYoAu1JGBMoRMdCrBZQ5lMhwPFRyvKUJBoFIooxTs1haKCHx3f8tvybK/
+        NmyzZPGTfP/45Z5zzzm/c+/JJa/4XwFCTNICJnMlwim5EqFZvjiAfMAuGZ/MbcT0rHBq0fkd9iOFiStR
+        ms4bl/hP06T6kmmsiXGRCMzOFIoWDH0lWjactd2+7UFOEDK2mevEPDNH1sR4pPmT99MCLAal1/fhs1BL
+        pTjY4un9c744JTAbYNrCmhmP9OAplypS1422F4QgP2q27tuElSMX41yGk/mWYtbEeIiFxCo9yHyo5WoI
+        Hp9fi8as1aj5wgNJ/OnaU14zrFkz45HsZxqYs5+jbczegFrxItR/7gpJ5GxdvJ/1ftbEuJwOsLhZlOiC
+        qmRn3KfKiea8OMazqRWJyCTWxPAUCslHFUmOe+7E2UQm8i2Hy046ozzeFrdiHXHAz16738eOw5oah+uh
+        ZKmsUqhVt4nQUhw5Xv/lEpQdt0W8wHLooK9DEGtmHDw8PISeGz1e7N0ZgPxzfDRXC6BRHISqORplF+YN
+        lsROPXQlmliw5oaFmXbB3msKvb02j0VERCAsTAhvr03YFb0RNy+7o7WSO1aaaJFbEEHeYl0MR7GAmJcn
+        OpyRlQX9epsOnPijvvDx8QSP5w2BQAB/ng+43PV6EY9j+MlXtIuYVSTOOa1oPDoyppHgef8eDCtD0Cd1
+        Q2HeSkSEusGLuwlMa9zd3Q2bAOh1KhXZHlLejdKNazMxpj6AEVUkhnp4GGhdS7UMvU1LaQu8kBzucIl1
+        Mxw3Y17fKisXqsZ0FzCuy4VeeRj6XwTQyT9GT4ML+ltc0PNwLgba+KgUW1de2UqmsK4vT0GkqYv0qmfL
+        qCabBs/BkFJMK4/AoIKPZ23+6H30Ifoez4f8gR2UUnfU5Dk3FgiIDev+ctBh41ibvbzyuSoDY9qz0KtS
+        oJHvhL4nAEO9R9DfFkOv3hIo6udAdm8mTcANDZddmr4JJ7bsFhPnawGZW50+7ztdZywUzbtf6JWxNPgx
+        DHbxafC9+K3rCFStQigbnSGrsoGsmoO+Vi/U5y9ufukE8uh1u3Pc4YKyxg8dRRt6H11eIdN0JUHd7g99
+        7ye0DbG02jCoWtZDUecAea0r/Y7Es84YVGU61RUFEkt2q4lzLYQ43Ut558aPJ+dc72o4Mq7uiIKuO4gG
+        T4C6YwtUT3aj96ET5D+9jc4a5nsfTSAOxQnmN6j7DKrpVGZUk6km9CAxObmJLCxNfreovS5qVNsdj2FV
+        AtpveGqbSrjj/U+2oLvWHt2PfNB8awUGZJ9C2bQdV2NMUqgvcwiZd8BMKmYkT6V6jepfwTwkrZdyyPy8
+        3dap9Rddn0rvBo6WJNu29EkP0f670yvois5qb1RdW/hcLY+DtGTVYIIn8aN+b1L9NQlzqj//xj+GyZhx
+        tqOau2URWZfmZ3ri+xP2NdIfVg921wVD8XM4KjIcOmqL12jU8liUplg9WMUh77E+b1DNomLawRTDzIYJ
+        vQ+YzJlEmA3tltMARzeQzdnbJh2+dnByVq7Q5PTtE7PKKiWzG7JDJ+2gNkzVVlR/PwcGganAlIrZlKmK
+        CcD83uncxcRq64I/+s2sT/jgveI/gJDfAUhxeISIt5MvAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="FileToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -220,50 +220,50 @@
   <data name="ExportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE9+YaLZMJRBo
-        YF0GTHEilDp0gy1T4jXTRGeypm7xEhMbSdzawbZQRi/codLDaCntWEk5pCljGijh3httT29c32DwkV93
-        3As51B66lzzJJyfn5Jzneb6/c8kR7Gtf/5VMJjsoFlcfFYtrRE+LdyVnX2bt/18SyfljCkWj3O32jSwu
-        LtJp43bbZVd/+rGy8uKLbERylUvOFXm9vtGtrS1sbm6mDfFxjj3qlUhq3mAjkosUsNsduo2NDaytraUN
-        8enW9ynF4nPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+OEZ/uHoOCV4H79+06cvHy8jIv/EEGVdf1
-        +LCBgtM1nzhGfDq791BgZWUF8XicF75ACFVKCldpDyQKCj228USJPRUghtFolBcefwCVNyj86lrBtTEG
-        ZbcsUBhGoG3vusmzwLA2FoshEolworM6cUll3sEXjSYU11GQji/j49EYLjtjKG2yo1haP3a87KKIjUiu
-        xwVsWhLEMAwn3+msKNH9iap+zw7ODi7hMzqOcksEZ4ai+GQkjgI1vZX10W8DAtHnL7Axu4sUsFhs2nA4
-        jFAoxIlMa8Vb7TN4zxRBRT83b/eFE7xzL4wPzNHE+Vlfqh4cKvr2FTaKW6TAwMCQlkwaCAQ4kTYPokg9
-        jYreMMp+5+ZUN5OgtIeBhApDpHD+/fynKuuzxZdfYqO49XgFhjTBYBB+v5+TK3fNeF1OI1/5xw4Kb0+h
-        vCuMky0hnGrbfhC7QnhVTv91uFquF5z46jk2ZneRAmazVUMm9fl8nFDDD1HX+eAJ8lYLftaYcE1FQSjr
-        xGkdgxINgzfVAeT+MIiTXyvoovIaIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRBwqk7Th9l8GJm27kyXpR
-        12rCnSY1v9fQaDRryKRutzsl5ufnMTU1BdrhRMGVDuT94sJxaQfa7g1hdnYWTc0t/D5EfX1GDZlsYWEh
-        Zaanp+EYG0f+N62o+L4DZhuNiYmJRDm1tv0G7wL/TpYq5DZMTLpQp+2H4+EjuFyuRCnio2puuc6rgMFg
-        UpOpyPLxZWZmJhFMtmR/+6dkbwXIVMQkXcggKpWOX4Ht70DX0tISvF5v2hCftg79nVT/iA7m54tKqi/U
-        NjY0qAxKZYMxXerrb1Nn3j9/KzdXlNIKHMjMzMw6+lq2OCevsDY7R3gpXXJyCmuPHDlWmpGRcZjNSEkH
-        hELhM9vbQ08B4rOvfe0igeAfo9ZAhBqek6oAAAAASUVORK5CYII=
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMar0f0BvFhIzMaLJXuzxETjNgKB
+        TqwRcGOOQelkU9C4kem2uCXqEptOs0uWrBnJpBXUUKQX7tDRIi2lFUvKIV0RZ6CEe2+0Pb1xfcPCnvGr
+        Z74Yh66H+pIn+eTknJzzPM/3dy45vF3t6r+SSCR7hcKKw0JhpeBF8aHozBuM/f9LJDp3RCarl7pc3qH5
+        +XkqZVwum+TGTz+WlV14jYlIrBLR2XyPxzu8sbGB9fX1lCE+jpEn3SJR5dtMRGKRAjabXbO2toaVlZWU
+        IT6d2h65UHg2k4lILFLAaqU0q6urWF5e5kQ4GoNMO4g5b+D5MeLT2aWTcSrw8KFNQy5eXFzkhC9Ao/yW
+        Fp/W6eFwzsaPEZ/2zh0UWFpaQiwW44TXH0S5XI8blBsimR5d1tF4iR0VIIaRSIQTbp8fZTV6/Opcws0R
+        GsV3zJDphqBu7bjNscCgOhqNIhwOs6KxOHBZYdrCV/VGFFTrIR5dxOfDUVxzRFHUYEOBuHbkWPEFAROR
+        WM8KWNUkiKZpVr7TWFCoeYryXvcWzvQv4AsqhhJzGKcHIrg4FMM7yqGNjM9+6+MJvnyVidlepIDZbFWH
+        QiEEg0FWJGoL3mudwkfGMEp72Xm/JxTngwchfGKKxM/P+FrxaH/+tweZKHaRAn19A2oyqd/vZ0Xc2I98
+        5SRKu0Mo/p2dk510nKIuGiJ9CIKaP/5+5ZLC8lLBtdeZKHY9W4EBVSAQgM/nY+X6fRPeklLIlf+5hby7
+        EyjpCOFEUxAnWzYfxI4gDkqpvw5USLW849+8zMRsL1LAZLKoyKRer5cV/eBjVLc/eo602YyfVUbcVOjB
+        l7TjlIZGoYrGu0o/sn/ox4krMiq/pJLPRCQWKWAwmFVkUrfbnRQzMzMYHx+HbdiOo+JWnLpP4/htF3Ik
+        3ahuNuJeg5Lba2gwmFRkUpfLlRSzs7OYmJgAZXfg6PU25PzixDFxG1oeDGB6ehoNjU3cPkQ9PQYVmWxu
+        bi5pJicnYR8ZRe7VZpR+3waTlcLY2Fi8nFLdWsO5wL+TJQu5DWPjTlSre2F//AROpzNeivgoGptucSqg
+        0xmVZCqyfFyZmpqKB5Mt2d/8KdlZATIVMUkVMohCoeFWYPM70LGwsACPx5MyxKelTXsv2T+ivbm5gsKK
+        81X1dXUKnVxeZ0iV2tq7+tMfn7uTnS1IagX2pKenZxx+M1OYlZNXlZnFv5wqWVl5VYcOHSlKS0s7wGQk
+        pT18Pn/f5nb/C4D47GpX24jH+wd5hEB/hVYOlgAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="ClearFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvMkQFEcfCYwyL22A6NW4shokJ
-        TieCmMlDpBQKBQUmvlBUpkYoAj4wSBfryEAZQiI6heAShm8cDxUYLxWlPCsVGKVgt7ZQ3t/d3/Jbsuyv
-        DdosWfwk3z9+uefcc87v3HtyyWv+V4AQg7RAQy+xYGaOWGCcJwokH7FL+icjkhidE8wqvrDTZrQwyRX3
-        xdxJccBs1Rk/Mps10S9ivvHpQuGSoUvClcOZUTZt1dnBSI800Yi4xvasif5ICyBLREGmg5Lr+/B1mJlc
-        FGL64tF5P5zgGw8wbWHN9MfZkJmXy9PWjbcXhCIvyk5TlOQ6mhfvNJzCMxOxJvpDJCDmZ4NNhpqvheLZ
-        hbVozPwMNd964CRvjvqE91wL1kx/pPgbBWXv56gbs9xQK1qG+m9cII6w0yT4W+xnTfTLqUDTG8VJTqhM
-        ccQjquydnLGjXMtaoZDMYE10T6GAfFJ+0j76frxlRDLPbLj0uCPKEqxwM84eB/xt1Pt9rTmsqX64Hkac
-        pRUCtbJNiJbbEZP1361A6TErHOPPGzroZxvMmukHDw8PgecGj7G9uwKRd56Hpio+VN0HoWjagbKLiwbv
-        xs2KvbqDmLLmuoWZdiE+awp9fTZNhIeHY+tWAXy8N2L3jg24ccUdrQ+8J0qSTHMKwsk7rIvuuMUnJmVJ
-        tqelpcG/3qEDJ+GIH3x9PcHl+oDP5yOA6wsvr3VaIZej+8lXvJsYlyctONXdeGR0QiXGSH80huWh6JOs
-        R2GuK8LD1sPbayOY1ri7u+s2AdDrVCK0ipU/iNJMqjMwoTyAUUUEhnq4GGhZS/Upep870xZ4I2Wb7WXW
-        TXfciHlzi7RMoJjQXMSkJgda+SFof+FDI9uEngYn9Dc7oefJQgy08VAhsqi4uoXMZF2nT0GEkZPkmmfz
-        uCqLBs/GkFxEKw/HYDcPr9oC0Pv0Y/Q9WwxZtTXkEnfU5Do2FvCJJes+Peiwsa/NWlkxokjHhPoctIpU
-        qGS7oO0JxFDvYfS3xdCrtwLd9QsgfTiPJrAeDVecnv+wjVixW0yd7/lkYdXZD37UdMahpyl6TCuPo8GP
-        YvAljwbfi99eHoaiRQB5oyOklZaQVnHQ1+KN+rzlTdNOIJdet/vHbC/Ka/zRUezW+/TKKqnq5Uko2wOg
-        7f2StiGOVrsViuZ16K6zhazWhX5H4FVnDCozHOqKg4gZu9XUyQ8lDg9T3yv66fiC612PD08qO7ZD0xVM
-        gydC2bEZitY96H3iANnP76KzhvneRxOIx61EkyLqPpdqDpUxlSHVlB4kBsc3kqUlKe8Xd9RtH1d3JWBY
-        kYj2Ik910z2vyf7WzeiqtUHXU1803VyFAelXkD+PwrUYg1TqyxxC5h0wj4oZybOo3qD6VzAPSQtnDlmc
-        u8fiTP0llxfND4LG76ZYNfdJYmn/3ekVdEFnlQ+q8peOKGXxkNxdPZjoSfyp39tUf03ChOrPv/GPYTJm
-        nK2pFm5eRj5P8zdKvp1sUyO5t2awqy4E3Y+3oTzdtqPu1hqVUhaHklTz6tUcsoj1eYtqPhXTDqYYZjZM
-        6X3AZM4kwmxovZIGOOJGvsiKnHEo/6BhZo7A4NSd5PmlFWK7hqywGTupDVO1OdXfz4FOYCowomI2Zapi
-        AjC/d47XcmK+5cM/+s2sT/ngveY/gJDfAaW3eKsWXri7AAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvOkQFEcfCY0yL28DpNG4sRsXE
+        t4AYV0CkFArl6RDf+JgaoQgqYoAu1JGBMoRMdCrBZQ5lMhwPFRyvKUJBoFIooxTs1haKCHx3f8tvybK/
+        NmyzZPGTfP/45Z5zzzm/c+/JJa/4XwFCTNICJnMlwim5EqFZvjiAfMAuGZ/MbcT0rHBq0fkd9iOFiStR
+        ms4bl/hP06T6kmmsiXGRCMzOFIoWDH0lWjactd2+7UFOEDK2mevEPDNH1sR4pPmT99MCLAal1/fhs1BL
+        pTjY4un9c744JTAbYNrCmhmP9OAplypS1422F4QgP2q27tuElSMX41yGk/mWYtbEeIiFxCo9yHyo5WoI
+        Hp9fi8as1aj5wgNJ/OnaU14zrFkz45HsZxqYs5+jbczegFrxItR/7gpJ5GxdvJ/1ftbEuJwOsLhZlOiC
+        qmRn3KfKiea8OMazqRWJyCTWxPAUCslHFUmOe+7E2UQm8i2Hy046ozzeFrdiHXHAz16738eOw5oah+uh
+        ZKmsUqhVt4nQUhw5Xv/lEpQdt0W8wHLooK9DEGtmHDw8PISeGz1e7N0ZgPxzfDRXC6BRHISqORplF+YN
+        lsROPXQlmliw5oaFmXbB3msKvb02j0VERCAsTAhvr03YFb0RNy+7o7WSO1aaaJFbEEHeYl0MR7GAmJcn
+        OpyRlQX9epsOnPijvvDx8QSP5w2BQAB/ng+43PV6EY9j+MlXtIuYVSTOOa1oPDoyppHgef8eDCtD0Cd1
+        Q2HeSkSEusGLuwlMa9zd3Q2bAOh1KhXZHlLejdKNazMxpj6AEVUkhnp4GGhdS7UMvU1LaQu8kBzucIl1
+        Mxw3Y17fKisXqsZ0FzCuy4VeeRj6XwTQyT9GT4ML+ltc0PNwLgba+KgUW1de2UqmsK4vT0GkqYv0qmfL
+        qCabBs/BkFJMK4/AoIKPZ23+6H30Ifoez4f8gR2UUnfU5Dk3FgiIDev+ctBh41ibvbzyuSoDY9qz0KtS
+        oJHvhL4nAEO9R9DfFkOv3hIo6udAdm8mTcANDZddmr4JJ7bsFhPnawGZW50+7ztdZywUzbtf6JWxNPgx
+        DHbxafC9+K3rCFStQigbnSGrsoGsmoO+Vi/U5y9ufukE8uh1u3Pc4YKyxg8dRRt6H11eIdN0JUHd7g99
+        7ye0DbG02jCoWtZDUecAea0r/Y7Es84YVGU61RUFEkt2q4lzLYQ43Ut558aPJ+dc72o4Mq7uiIKuO4gG
+        T4C6YwtUT3aj96ET5D+9jc4a5nsfTSAOxQnmN6j7DKrpVGZUk6km9CAxObmJLCxNfreovS5qVNsdj2FV
+        AtpveGqbSrjj/U+2oLvWHt2PfNB8awUGZJ9C2bQdV2NMUqgvcwiZd8BMKmYkT6V6jepfwTwkrZdyyPy8
+        3dap9Rddn0rvBo6WJNu29EkP0f670yvois5qb1RdW/hcLY+DtGTVYIIn8aN+b1L9NQlzqj//xj+GyZhx
+        tqOau2URWZfmZ3ri+xP2NdIfVg921wVD8XM4KjIcOmqL12jU8liUplg9WMUh77E+b1DNomLawRTDzIYJ
+        vQ+YzJlEmA3tltMARzeQzdnbJh2+dnByVq7Q5PTtE7PKKiWzG7JDJ+2gNkzVVlR/PwcGganAlIrZlKmK
+        CcD83uncxcRq64I/+s2sT/jgveI/gJDfAUhxeISIt5MvAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="SearchToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -272,25 +272,25 @@
   <data name="SearchToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQQSURBVFhH7ZZtaJNXFMcrbG7MD24wJgirintxTV+Spm9p
-        0vSVtLUtbUOblr6xpjWtTa2aZt10ljlmpug2dB1uzg8TtPbjJgoOOhAKfrAgo1JppbOKWNCtKta8KG2e
-        7HfkDtynkdaGffAPP26e3Pucc+655977xL3Q/15Go3E1mDMyMmry8/O3ZWVlOXi2JCUlvaGGLI8MBsNa
-        HO4tKCiYzM3NvV5YWDhZVFR0Ga7yfI2+CTiQlpb2tnrl+clkMllxPJ6Tk3Ozp6fn1Ojo6JH5+flvwuHw
-        fk3TPhsbG+tDPgK5kpeXN5GammpTry5d6enpVgzPMLsrODqK0+OK7+Ar2EcQu8EzMzPTXVJS8guB3maJ
-        lh4Ea/umxWKZyM7Ovjk1NXUYZ9/CMfgRJICvwYfzfgkAts7OztoY/xtB/CHLpkwtTqS+H2NBn88nTvfB
-        QfgnEGkPgWRgD/SCOxKJ6Ht7e428O2s2mw8qU9GLtL9EhY9j6K+5ublPxQnOvsDBAVoJRPgSPqdP+iWA
-        Nvrjad/i/Uu8O037qjIZnUh/PGm8T5VPYrAHPoI9ONgrgSjEeT//fUK7E0z8Xk+7lveOWa3WOexsUiaj
-        E8WnZwb+0tLScYy6MLoNZJa7QGYs6y6plwKU/zczbhPtRtr4ioqKI+yIkJwZymR0ooo3UIAPqeo7GG2G
-        LeCGHeCFPvgYtkMJGCAR3pMslJeXD5P+AOdCojIZnRISElZmZmbeKisrezI4ONiK4TpwQoeAkw9p7bR5
-        tNmQBsmShenp6ferqqoeSv0kJyevUiajF1k4XlxcHMbY78FgcB0O3gWZpcw2E2cW2lz4VwB1dXU/kIEw
-        yzikTC1OKSkp69nL99ra2hbsdvtQKBR6BycfQIpymAUmyIBUSOzq6trpdDoXpH4WXYDPijV0shsCLpcr
-        3NDQMD4wMFCMIx1IEOJUMIyMjJibmprOut1ujR2gcX4cUiaWLoJwk85HBKF5PJ5wR0fHn8x0GGen4Vxn
-        Z+cNr9e70N3drVG4EQLWqqur/Q6Ho0qZWLq4YIxwEeNBjIdxHMGphtMIM9eo+CekfIwxd+GxZIEAAvX1
-        9X3KxPORrCt44Cc4Dydw6CVDOuln56zh+ZpOpwtygz7NBEV5kuy9/NRALETxvq7X6y8TRECCoID9ZOJi
-        bW3tajVk+UVmXmMHXSAbfq5yraamJtTY2HiDQl6nhiy/5DAjgDPwiC8oraWlZZ7leEAg6WpITLSCAL5/
-        JgiNAALNzc121R8bEUA/+G02m9ba2qpxuAU5sPar7tiIAHZJENwvEoDW3t4epCZ+5sJ7RQ1ZfnGouSBQ
-        WVkpWzTCN4PQoLpjI7Lg4KJ7LM45OaekWFVX7MTn3m7ui185MWN3NrzQfysu7m/OfMTTeUc/EwAAAABJ
-        RU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQNSURBVFhH7ZZtSJtXFMcdrNvoPnSDsYFQ27G3zvqSGN9i
+        Ynwl8xU11ii+MSNGa6xbNHNrV1nHmrXoNtY51nV+aGGz/biVDjboYCD4YYIUi0WLrUqZsLZuo9YkiubJ
+        fkeu0H0a0Rr2oX/4cfPk3uecc889994n6pH+9zIYDLvAlJqaeiAnJ+dQenq6nWdzfHz8s2rI9kiv10fj
+        8Fhubu5UVlbWzby8vKn8/PwxuMbzdfom4WRycvJu9crDk9FotOB4IjMzc66zs/O70dHRU6urq58Fg8ET
+        mqZ9MD4+3oO8BHI1Ozt7Mikpyape3bpSUlIsGJ5ndldx9BVOBxVfwidwnCCOQNf8/HxHQUHBDwT6O0u0
+        9SBY2+fMZvNkRkbG3PT09Oc4+wLOwDcgAXwKXpz3SgBwcGFhwcr4XwjihiybMrU5kfpejPm9Xq84PQ59
+        sBGItP0gGTgK3eAKhUK67u5uA+8umEymPmUqfJH2x6nwCQzdXVxcfF+c4OwjHJyklUCEj+FD+qRfAmim
+        P4b2ed7/jXdnaJ9SJsMT6Y8hjX9R5VMY7IR34CgOjkkgCnHey3/v0brByO+9tNG8d8ZisSxiZ58yGZ4o
+        Ph0zWCosLJzAqBOjh0BmeRhkxrLuknopQPm/iHH7aF+ijSktLT3FjgjImaFMhieq+EUK8B5V/QdGG6AF
+        XPA2eKAH3oW3oAD0EAevShZKSkouk34f50KcMhmeYmNjn0hLS7tVVFS0MjQ01IThanBAq4CTN2lttNm0
+        GZAMCZKFmZmZ18rLy+9J/SQkJDytTIYvsjBotVqDGLvi9/v34OAVkFnKbNNwZqbNgn8FUF1d/XVxcXGQ
+        ZbygTG1OiYmJe9nLfzY3N6/ZbLYLgUDgZZy8DonKYToYIRWSIK69vd3tcDjWpH42XYAPijV0sBt8LS0t
+        wdra2omBgYE3cLQfJAhxKuiHh4dN9fX1l1wul8YO0Dg/+pWJrYsgXKTzvtPp1Nxud7C1tfUOM72Ms/Pw
+        Y1tb26zH41nr6OjQKNwQAWsVFRVLdru9XJnYurhgDDCCcT81EcRxCKcaTkPMXKPiV0j5OGNuw7JkgQB8
+        NTU1PcrEw5GsK3TBWfgJzuHQQ4b2Sz875wWer7OL/Nyg65mgKL8lezvWDURCFO8zOp1ujCB8G0GQiZGq
+        qqpdasj2i8zsZAf9SjaWuMq1ysrKQF1d3SyFvEcN2X7JYUYAF+E+X1BaY2PjKsvxN4GkqCER0WMEcPqB
+        IDSy4GtoaLCp/siIAHphiZNVa2pq0jjc/BxYJ1R3ZEQAhyUIjmkJYD0IsvE9F96Tasj2i0PNCb6ysjLZ
+        HSG+GYRa1R0ZkQU7F92yOOfknJZiVV2RE597R7gvfubEjNzZ8Ej/raiofwDfRcSvZj2+/AAAAABJRU5E
+        rkJggg==
 </value>
   </data>
   <metadata name="MainTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
