Improve metallic theme colors

--- a/src/LangPad/Editors/CharacterEditor.resx
+++ b/src/LangPad/Editors/CharacterEditor.resx
@@ -146,50 +146,50 @@
   <data name="ExportLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMar0f0BvFhIzMaLJXuzxETjNgKB
-        TqwRcGOOQelkU9C4kem2uCXqEptOs0uWrBnJpBXUUKQX7tDRIi2lFUvKIV0RZ6CEe2+0Pb1xfcPCnvGr
-        Z74Yh66H+pIn+eTknJzzPM/3dy45vF3t6r+SSCR7hcKKw0JhpeBF8aHozBuM/f9LJDp3RCarl7pc3qH5
-        +XkqZVwum+TGTz+WlV14jYlIrBLR2XyPxzu8sbGB9fX1lCE+jpEn3SJR5dtMRGKRAjabXbO2toaVlZWU
-        IT6d2h65UHg2k4lILFLAaqU0q6urWF5e5kQ4GoNMO4g5b+D5MeLT2aWTcSrw8KFNQy5eXFzkhC9Ao/yW
-        Fp/W6eFwzsaPEZ/2zh0UWFpaQiwW44TXH0S5XI8blBsimR5d1tF4iR0VIIaRSIQTbp8fZTV6/Opcws0R
-        GsV3zJDphqBu7bjNscCgOhqNIhwOs6KxOHBZYdrCV/VGFFTrIR5dxOfDUVxzRFHUYEOBuHbkWPEFAROR
-        WM8KWNUkiKZpVr7TWFCoeYryXvcWzvQv4AsqhhJzGKcHIrg4FMM7yqGNjM9+6+MJvnyVidlepIDZbFWH
-        QiEEg0FWJGoL3mudwkfGMEp72Xm/JxTngwchfGKKxM/P+FrxaH/+tweZKHaRAn19A2oyqd/vZ0Xc2I98
-        5SRKu0Mo/p2dk510nKIuGiJ9CIKaP/5+5ZLC8lLBtdeZKHY9W4EBVSAQgM/nY+X6fRPeklLIlf+5hby7
-        EyjpCOFEUxAnWzYfxI4gDkqpvw5USLW849+8zMRsL1LAZLKoyKRer5cV/eBjVLc/eo602YyfVUbcVOjB
-        l7TjlIZGoYrGu0o/sn/ox4krMiq/pJLPRCQWKWAwmFVkUrfbnRQzMzMYHx+HbdiOo+JWnLpP4/htF3Ik
-        3ahuNuJeg5Lba2gwmFRkUpfLlRSzs7OYmJgAZXfg6PU25PzixDFxG1oeDGB6ehoNjU3cPkQ9PQYVmWxu
-        bi5pJicnYR8ZRe7VZpR+3waTlcLY2Fi8nFLdWsO5wL+TJQu5DWPjTlSre2F//AROpzNeivgoGptucSqg
-        0xmVZCqyfFyZmpqKB5Mt2d/8KdlZATIVMUkVMohCoeFWYPM70LGwsACPx5MyxKelTXsv2T+ivbm5gsKK
-        81X1dXUKnVxeZ0iV2tq7+tMfn7uTnS1IagX2pKenZxx+M1OYlZNXlZnFv5wqWVl5VYcOHSlKS0s7wGQk
-        pT18Pn/f5nb/C4D47GpX24jH+wd5hEB/hVYOlgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE98YTbZMJRBo
+        xroMmOJEKHXoBlumxGumic5kTd3iJSY2ksjawbZQRi/codLDaCntWEk5pCljGijh3httT29c32DwkV93
+        3As51B66lzzJJyfn5Jzneb6/c8kR7Gtf/5VMJjsoFlcdFYurRU+LdyXnXmbt/18SyYVjCkWj3O32jSwu
+        LtJp43bbZdd++rGi4tKLbERylUnOF3q9vtGtrS1sbm6mDfFxjj3qlUiq32AjkosUsNsduo2NDaytraUN
+        8enW9ynF4vPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+OEZ/uHoOCV4H79+06cvHy8jIv/EEGlXV6
+        fNhAwemaTxwjPp3deyiwsrKCeDzOC18ghEolhWu0BxIFhR7beKLEngoQw2g0yguPP4CKGxR+da3g+hiD
+        0lsWKAwj0LZ33eRZYFgbi8UQiUQ40VmduKwy7+CLRhOKailIx5fx8WgMV5wxlDTZUSStHztReknERiTX
+        4wI2LQliGIaT73RWFOv+RGW/ZwfnBpfwGR1HmSWCs0NRfDISh1Bt38r66LcBgejzF9iY3UUKWCw2bTgc
+        RigU4kSmteKt9hm8Z4qgvJ+bt/vCCd65F8YH5mji/KwvVQ8OFX77KhvFLVJgYGBISyYNBAKcSJsHUaie
+        RnlvGKW/c3O6m0lQ0sNAQoUhqnP8/fynKuuzRVdeYqO49XgFhjTBYBB+v5+Tq3fNeF1OI1/5xw4Kbk+h
+        rCuMUy0hnG7bfhC7QnhFTv91uEquF5z86jk2ZneRAmazVUMm9fl8nFDDD1Hb+eAJ8lYLftaYcF1FQSjr
+        xBkdg2INgzfVAeT+MIhTXyvowrJqIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRB45L23HmLoOTN93Ik/Wi
+        ttWEO01qfq+h0WjWkEndbndKzM/PY2pqCrTDieNXO5D3iwsnpB1ouzeE2dlZNDW38PsQ9fUZNWSyhYWF
+        lJmenoZjbBz537Si/PsOmG00JiYmEuXU2vYbvAv8O1mqkNswMelCrbYfjoeP4HK5EqWIj6q5pY5XAYPB
+        pCZTkeXjy8zMTCKYbMn+9k/J3gqQqYhJupBBVCodvwLb34GupaUleL3etCE+bR36O6n+ER3MzxcVV12s
+        aWxoUBmUygZjutTX36bOvn/hVm6uKKUVOJCZmZl19LVscU5eQU12jvByuuTkFNQcOXKsJCMj4zCbkZIO
+        CIXCZ7a3h54CxGdf+9pFAsE/TzJAepy11jEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ClearLocalToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvOkQFEcfCY0yL28DpNG4sRsXE
-        t4AYV0CkFArl6RDf+JgaoQgqYoAu1JGBMoRMdCrBZQ5lMhwPFRyvKUJBoFIooxTs1haKCHx3f8tvybK/
-        NmyzZPGTfP/45Z5zzzm/c+/JJa/4XwFCTNICJnMlwim5EqFZvjiAfMAuGZ/MbcT0rHBq0fkd9iOFiStR
-        ms4bl/hP06T6kmmsiXGRCMzOFIoWDH0lWjactd2+7UFOEDK2mevEPDNH1sR4pPmT99MCLAal1/fhs1BL
-        pTjY4un9c744JTAbYNrCmhmP9OAplypS1422F4QgP2q27tuElSMX41yGk/mWYtbEeIiFxCo9yHyo5WoI
-        Hp9fi8as1aj5wgNJ/OnaU14zrFkz45HsZxqYs5+jbczegFrxItR/7gpJ5GxdvJ/1ftbEuJwOsLhZlOiC
-        qmRn3KfKiea8OMazqRWJyCTWxPAUCslHFUmOe+7E2UQm8i2Hy046ozzeFrdiHXHAz16738eOw5oah+uh
-        ZKmsUqhVt4nQUhw5Xv/lEpQdt0W8wHLooK9DEGtmHDw8PISeGz1e7N0ZgPxzfDRXC6BRHISqORplF+YN
-        lsROPXQlmliw5oaFmXbB3msKvb02j0VERCAsTAhvr03YFb0RNy+7o7WSO1aaaJFbEEHeYl0MR7GAmJcn
-        OpyRlQX9epsOnPijvvDx8QSP5w2BQAB/ng+43PV6EY9j+MlXtIuYVSTOOa1oPDoyppHgef8eDCtD0Cd1
-        Q2HeSkSEusGLuwlMa9zd3Q2bAOh1KhXZHlLejdKNazMxpj6AEVUkhnp4GGhdS7UMvU1LaQu8kBzucIl1
-        Mxw3Y17fKisXqsZ0FzCuy4VeeRj6XwTQyT9GT4ML+ltc0PNwLgba+KgUW1de2UqmsK4vT0GkqYv0qmfL
-        qCabBs/BkFJMK4/AoIKPZ23+6H30Ifoez4f8gR2UUnfU5Dk3FgiIDev+ctBh41ibvbzyuSoDY9qz0KtS
-        oJHvhL4nAEO9R9DfFkOv3hIo6udAdm8mTcANDZddmr4JJ7bsFhPnawGZW50+7ztdZywUzbtf6JWxNPgx
-        DHbxafC9+K3rCFStQigbnSGrsoGsmoO+Vi/U5y9ufukE8uh1u3Pc4YKyxg8dRRt6H11eIdN0JUHd7g99
-        7ye0DbG02jCoWtZDUecAea0r/Y7Es84YVGU61RUFEkt2q4lzLYQ43Ut558aPJ+dc72o4Mq7uiIKuO4gG
-        T4C6YwtUT3aj96ET5D+9jc4a5nsfTSAOxQnmN6j7DKrpVGZUk6km9CAxObmJLCxNfreovS5qVNsdj2FV
-        AtpveGqbSrjj/U+2oLvWHt2PfNB8awUGZJ9C2bQdV2NMUqgvcwiZd8BMKmYkT6V6jepfwTwkrZdyyPy8
-        3dap9Rddn0rvBo6WJNu29EkP0f670yvois5qb1RdW/hcLY+DtGTVYIIn8aN+b1L9NQlzqj//xj+GyZhx
-        tqOau2URWZfmZ3ri+xP2NdIfVg921wVD8XM4KjIcOmqL12jU8liUplg9WMUh77E+b1DNomLawRTDzIYJ
-        vQ+YzJlEmA3tltMARzeQzdnbJh2+dnByVq7Q5PTtE7PKKiWzG7JDJ+2gNkzVVlR/PwcGganAlIrZlKmK
-        CcD83uncxcRq64I/+s2sT/jgveI/gJDfAUhxeISIt5MvAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATtSURBVFhH7ZZ7UNRVFMcvGoKCiNHwiGShktJ0LBqHxBlM
+        EkEsFxBYFheWpyGKD1RSR1gEfOCAW645+SAeFZLKYI2hpqI8FDEepjwWBFaWRywLbu0uLCLw7f6aXzNN
+        fxXuTjONn5nvH7+559xzzu/ce+aS5/yvACFGR0KmciXCaXkSoUmBOIS8zS4ZnhPrifExoWnJ6Y12o8Vp
+        7rj+GW9CEjxdnRVAprMmhkUiMDlcLJo//JXIdeTkBru2uzmhOL7eTCvmmTiyJobjSDB5K4tvPiS9sA2f
+        RlgoxGHmj6pOBeCAwGSQaQtrZjiOhk07U5HpMdZeFI6C2Dna7/e5j36d7DKSwbcQsyaGQywklkdDzYZb
+        zoWj8bQHGk6+j5ovvHGQP0NzwHemFWtmODKCjNflbOdoGrI9USteiPrP3SCJmaNNCbLazpoYlkMh5pdK
+        0lxwJ8MZVVQ5GzhP9/Ksa0UiMoU10T/FQvJuxUHHLTeSrWNS+RYjZfudUZ5ig8tJjtgRZKfZ7m/LYU0N
+        w4UI4iqrFGpUbSJIL8dM1H+5GGX7bCASWAzvDLAPZc0Mg7e3t9BnlffTrZtCUHCKj+ZqAdQ9O6FsjsPN
+        XOeha0mmiWfjiDlrrl+YaRfmt7zYl/vheHR0NCIjhfDzXY34uFW4VOiFloo146Vp5nlF0eQV1kV/XBEQ
+        s/I0+8OystBfr9KBk7InAP7+PuDx/CAQCBDM8weXu0In4nH0P/lK4olJRZrDoZ6GPaPjagmeDGzBiCIc
+        /dKVKM53R3TESvhyV4NpjZeXl34TAL1OpSKbRMWtWO2E5gTGVTswqozBcC8Pg60eVO+hr8mVtsAXGVH2
+        Z1g3/XEp4cVAWblQOa7NxYQ2DzrFLuh+EUArX4Peey4YaHFB730nDLbxUSm2qjwbSKaxrs9OUYyxi/Sc
+        T8uYOpsGz8GwQkwrj8ZQDx+P24LR9+Ad9DfOg/yuLRRSL9TkOzcUCYg16/5s0GHjWJu9pPKJ8jjGNceg
+        U2ZCLd8EXW8Ihvt2Y6AtgV69xeipd4Ds9iyawErcK3Rp+i6K2LBbTJ5vBcSp+ugbP2g7k9DdHP9Up0ii
+        wfdiqItPg2/Fb127oWwVQtHgDNkda8iqOehv9UV9waLmZ04gn163G/vscxU1Qego8ex7ULhUpu46CFV7
+        MHR9H9M2JNFqI6FsWYGeOnvIa93odwwedybgzom5dSXriAW71eQ5H07m3s587eLN/Q4X5PW7J1QdsdB2
+        h9LgqVB1rIXy4Wb03Z8L+U+vorOG+d5GE0jGlVSzi9R9JtUMKhOqqVSTepAY7V9NFpRmvF7SVhc7pulO
+        wYgyFe0XfTSNV7kTAw/XorvWDt0P/NF8eSkGZZ9A0bQB5xKMMqkvcwiZd8AsKmYkm1K9QPWvYB6SVq4c
+        Mi9/s1VW/Tduj5pvrRu7lmHT0i9NpP33olfQDZ3Vfqg6v+CJSp4M6bVlQ6k+JIj6vUz11yTMqP78G/8Y
+        JmPG2ZbKae1C8sGRIOP0H9PtaqTXlw1114Wh5+coVBy376i9slytkiehNNPy7jIOeZP1eYlqNhXTDqYY
+        ZjZM6n3AZM4kwmxou4QG2ONJPspeP2XX+Z1TT+YJjQ5dTZ9dVimZcy87YspGasNUbUn193OgF5gKjKmY
+        TZmqmADM753BXUQsA+f/0W9mfdIH7zn/AYT8DhiseGI6ApMrAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="FileToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -220,50 +220,50 @@
   <data name="ExportFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO5SURBVFhH7ZbrT1N3HMar0f0BvFhIzMaLJXuzxETjNgKB
-        TqwRcGOOQelkU9C4kem2uCXqEptOs0uWrBnJpBXUUKQX7tDRIi2lFUvKIV0RZ6CEe2+0Pb1xfcPCnvGr
-        Z74Yh66H+pIn+eTknJzzPM/3dy45vF3t6r+SSCR7hcKKw0JhpeBF8aHozBuM/f9LJDp3RCarl7pc3qH5
-        +XkqZVwum+TGTz+WlV14jYlIrBLR2XyPxzu8sbGB9fX1lCE+jpEn3SJR5dtMRGKRAjabXbO2toaVlZWU
-        IT6d2h65UHg2k4lILFLAaqU0q6urWF5e5kQ4GoNMO4g5b+D5MeLT2aWTcSrw8KFNQy5eXFzkhC9Ao/yW
-        Fp/W6eFwzsaPEZ/2zh0UWFpaQiwW44TXH0S5XI8blBsimR5d1tF4iR0VIIaRSIQTbp8fZTV6/Opcws0R
-        GsV3zJDphqBu7bjNscCgOhqNIhwOs6KxOHBZYdrCV/VGFFTrIR5dxOfDUVxzRFHUYEOBuHbkWPEFAROR
-        WM8KWNUkiKZpVr7TWFCoeYryXvcWzvQv4AsqhhJzGKcHIrg4FMM7yqGNjM9+6+MJvnyVidlepIDZbFWH
-        QiEEg0FWJGoL3mudwkfGMEp72Xm/JxTngwchfGKKxM/P+FrxaH/+tweZKHaRAn19A2oyqd/vZ0Xc2I98
-        5SRKu0Mo/p2dk510nKIuGiJ9CIKaP/5+5ZLC8lLBtdeZKHY9W4EBVSAQgM/nY+X6fRPeklLIlf+5hby7
-        EyjpCOFEUxAnWzYfxI4gDkqpvw5USLW849+8zMRsL1LAZLKoyKRer5cV/eBjVLc/eo602YyfVUbcVOjB
-        l7TjlIZGoYrGu0o/sn/ox4krMiq/pJLPRCQWKWAwmFVkUrfbnRQzMzMYHx+HbdiOo+JWnLpP4/htF3Ik
-        3ahuNuJeg5Lba2gwmFRkUpfLlRSzs7OYmJgAZXfg6PU25PzixDFxG1oeDGB6ehoNjU3cPkQ9PQYVmWxu
-        bi5pJicnYR8ZRe7VZpR+3waTlcLY2Fi8nFLdWsO5wL+TJQu5DWPjTlSre2F//AROpzNeivgoGptucSqg
-        0xmVZCqyfFyZmpqKB5Mt2d/8KdlZATIVMUkVMohCoeFWYPM70LGwsACPx5MyxKelTXsv2T+ivbm5gsKK
-        81X1dXUKnVxeZ0iV2tq7+tMfn7uTnS1IagX2pKenZxx+M1OYlZNXlZnFv5wqWVl5VYcOHSlKS0s7wGQk
-        pT18Pn/f5nb/C4D47GpX24jH+wd5hEB/hVYOlgAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAO3SURBVFhH7ZbrT1t1HMa7xfkH8MKQLMoLE98YTbZMJRBo
+        xroMmOJEKHXoBlumxGumic5kTd3iJSY2ksjawbZQRi/codLDaCntWEk5pCljGijh3httT29c32DwkV93
+        3As51B66lzzJJyfn5Jzneb6/c8kR7Gtf/5VMJjsoFlcdFYurRU+LdyXnXmbt/18SyYVjCkWj3O32jSwu
+        LtJp43bbZdd++rGi4tKLbERylUnOF3q9vtGtrS1sbm6mDfFxjj3qlUiq32AjkosUsNsduo2NDaytraUN
+        8enW9ynF4vPZbERykQI2G61bX1/H6uoqLyKxOBT6YSz4gk+OEZ/uHoOCV4H79+06cvHy8jIv/EEGlXV6
+        fNhAwemaTxwjPp3deyiwsrKCeDzOC18ghEolhWu0BxIFhR7beKLEngoQw2g0yguPP4CKGxR+da3g+hiD
+        0lsWKAwj0LZ33eRZYFgbi8UQiUQ40VmduKwy7+CLRhOKailIx5fx8WgMV5wxlDTZUSStHztReknERiTX
+        4wI2LQliGIaT73RWFOv+RGW/ZwfnBpfwGR1HmSWCs0NRfDISh1Bt38r66LcBgejzF9iY3UUKWCw2bTgc
+        RigU4kSmteKt9hm8Z4qgvJ+bt/vCCd65F8YH5mji/KwvVQ8OFX77KhvFLVJgYGBISyYNBAKcSJsHUaie
+        RnlvGKW/c3O6m0lQ0sNAQoUhqnP8/fynKuuzRVdeYqO49XgFhjTBYBB+v5+Tq3fNeF1OI1/5xw4Kbk+h
+        rCuMUy0hnG7bfhC7QnhFTv91uEquF5z86jk2ZneRAmazVUMm9fl8nFDDD1Hb+eAJ8lYLftaYcF1FQSjr
+        xBkdg2INgzfVAeT+MIhTXyvowrJqIRuRXKSA0WjRkEk9Hk9KzM3NYXJyEvZRB45L23HmLoOTN93Ik/Wi
+        ttWEO01qfq+h0WjWkEndbndKzM/PY2pqCrTDieNXO5D3iwsnpB1ouzeE2dlZNDW38PsQ9fUZNWSyhYWF
+        lJmenoZjbBz537Si/PsOmG00JiYmEuXU2vYbvAv8O1mqkNswMelCrbYfjoeP4HK5EqWIj6q5pY5XAYPB
+        pCZTkeXjy8zMTCKYbMn+9k/J3gqQqYhJupBBVCodvwLb34GupaUleL3etCE+bR36O6n+ER3MzxcVV12s
+        aWxoUBmUygZjutTX36bOvn/hVm6uKKUVOJCZmZl19LVscU5eQU12jvByuuTkFNQcOXKsJCMj4zCbkZIO
+        CIXCZ7a3h54CxGdf+9pFAsE/TzJAepy11jEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ClearFileToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATqSURBVFhH7ZZ7TNNXFMcvOkQFEcfCY0yL28DpNG4sRsXE
-        t4AYV0CkFArl6RDf+JgaoQgqYoAu1JGBMoRMdCrBZQ5lMhwPFRyvKUJBoFIooxTs1haKCHx3f8tvybK/
-        NmyzZPGTfP/45Z5zzzm/c+/JJa/4XwFCTNICJnMlwim5EqFZvjiAfMAuGZ/MbcT0rHBq0fkd9iOFiStR
-        ms4bl/hP06T6kmmsiXGRCMzOFIoWDH0lWjactd2+7UFOEDK2mevEPDNH1sR4pPmT99MCLAal1/fhs1BL
-        pTjY4un9c744JTAbYNrCmhmP9OAplypS1422F4QgP2q27tuElSMX41yGk/mWYtbEeIiFxCo9yHyo5WoI
-        Hp9fi8as1aj5wgNJ/OnaU14zrFkz45HsZxqYs5+jbczegFrxItR/7gpJ5GxdvJ/1ftbEuJwOsLhZlOiC
-        qmRn3KfKiea8OMazqRWJyCTWxPAUCslHFUmOe+7E2UQm8i2Hy046ozzeFrdiHXHAz16738eOw5oah+uh
-        ZKmsUqhVt4nQUhw5Xv/lEpQdt0W8wHLooK9DEGtmHDw8PISeGz1e7N0ZgPxzfDRXC6BRHISqORplF+YN
-        lsROPXQlmliw5oaFmXbB3msKvb02j0VERCAsTAhvr03YFb0RNy+7o7WSO1aaaJFbEEHeYl0MR7GAmJcn
-        OpyRlQX9epsOnPijvvDx8QSP5w2BQAB/ng+43PV6EY9j+MlXtIuYVSTOOa1oPDoyppHgef8eDCtD0Cd1
-        Q2HeSkSEusGLuwlMa9zd3Q2bAOh1KhXZHlLejdKNazMxpj6AEVUkhnp4GGhdS7UMvU1LaQu8kBzucIl1
-        Mxw3Y17fKisXqsZ0FzCuy4VeeRj6XwTQyT9GT4ML+ltc0PNwLgba+KgUW1de2UqmsK4vT0GkqYv0qmfL
-        qCabBs/BkFJMK4/AoIKPZ23+6H30Ifoez4f8gR2UUnfU5Dk3FgiIDev+ctBh41ibvbzyuSoDY9qz0KtS
-        oJHvhL4nAEO9R9DfFkOv3hIo6udAdm8mTcANDZddmr4JJ7bsFhPnawGZW50+7ztdZywUzbtf6JWxNPgx
-        DHbxafC9+K3rCFStQigbnSGrsoGsmoO+Vi/U5y9ufukE8uh1u3Pc4YKyxg8dRRt6H11eIdN0JUHd7g99
-        7ye0DbG02jCoWtZDUecAea0r/Y7Es84YVGU61RUFEkt2q4lzLYQ43Ut558aPJ+dc72o4Mq7uiIKuO4gG
-        T4C6YwtUT3aj96ET5D+9jc4a5nsfTSAOxQnmN6j7DKrpVGZUk6km9CAxObmJLCxNfreovS5qVNsdj2FV
-        AtpveGqbSrjj/U+2oLvWHt2PfNB8awUGZJ9C2bQdV2NMUqgvcwiZd8BMKmYkT6V6jepfwTwkrZdyyPy8
-        3dap9Rddn0rvBo6WJNu29EkP0f670yvois5qb1RdW/hcLY+DtGTVYIIn8aN+b1L9NQlzqj//xj+GyZhx
-        tqOau2URWZfmZ3ri+xP2NdIfVg921wVD8XM4KjIcOmqL12jU8liUplg9WMUh77E+b1DNomLawRTDzIYJ
-        vQ+YzJlEmA3tltMARzeQzdnbJh2+dnByVq7Q5PTtE7PKKiWzG7JDJ+2gNkzVVlR/PwcGganAlIrZlKmK
-        CcD83uncxcRq64I/+s2sT/jgveI/gJDfAUhxeISIt5MvAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAATtSURBVFhH7ZZ7UNRVFMcvGoKCiNHwiGShktJ0LBqHxBlM
+        EkEsFxBYFheWpyGKD1RSR1gEfOCAW645+SAeFZLKYI2hpqI8FDEepjwWBFaWRywLbu0uLCLw7f6aXzNN
+        fxXuTjONn5nvH7+559xzzu/ce+aS5/yvACFGR0KmciXCaXkSoUmBOIS8zS4ZnhPrifExoWnJ6Y12o8Vp
+        7rj+GW9CEjxdnRVAprMmhkUiMDlcLJo//JXIdeTkBru2uzmhOL7eTCvmmTiyJobjSDB5K4tvPiS9sA2f
+        RlgoxGHmj6pOBeCAwGSQaQtrZjiOhk07U5HpMdZeFI6C2Dna7/e5j36d7DKSwbcQsyaGQywklkdDzYZb
+        zoWj8bQHGk6+j5ovvHGQP0NzwHemFWtmODKCjNflbOdoGrI9USteiPrP3SCJmaNNCbLazpoYlkMh5pdK
+        0lxwJ8MZVVQ5GzhP9/Ksa0UiMoU10T/FQvJuxUHHLTeSrWNS+RYjZfudUZ5ig8tJjtgRZKfZ7m/LYU0N
+        w4UI4iqrFGpUbSJIL8dM1H+5GGX7bCASWAzvDLAPZc0Mg7e3t9BnlffTrZtCUHCKj+ZqAdQ9O6FsjsPN
+        XOeha0mmiWfjiDlrrl+YaRfmt7zYl/vheHR0NCIjhfDzXY34uFW4VOiFloo146Vp5nlF0eQV1kV/XBEQ
+        s/I0+8OystBfr9KBk7InAP7+PuDx/CAQCBDM8weXu0In4nH0P/lK4olJRZrDoZ6GPaPjagmeDGzBiCIc
+        /dKVKM53R3TESvhyV4NpjZeXl34TAL1OpSKbRMWtWO2E5gTGVTswqozBcC8Pg60eVO+hr8mVtsAXGVH2
+        Z1g3/XEp4cVAWblQOa7NxYQ2DzrFLuh+EUArX4Peey4YaHFB730nDLbxUSm2qjwbSKaxrs9OUYyxi/Sc
+        T8uYOpsGz8GwQkwrj8ZQDx+P24LR9+Ad9DfOg/yuLRRSL9TkOzcUCYg16/5s0GHjWJu9pPKJ8jjGNceg
+        U2ZCLd8EXW8Ihvt2Y6AtgV69xeipd4Ds9iyawErcK3Rp+i6K2LBbTJ5vBcSp+ugbP2g7k9DdHP9Up0ii
+        wfdiqItPg2/Fb127oWwVQtHgDNkda8iqOehv9UV9waLmZ04gn163G/vscxU1Qego8ex7ULhUpu46CFV7
+        MHR9H9M2JNFqI6FsWYGeOnvIa93odwwedybgzom5dSXriAW71eQ5H07m3s587eLN/Q4X5PW7J1QdsdB2
+        h9LgqVB1rIXy4Wb03Z8L+U+vorOG+d5GE0jGlVSzi9R9JtUMKhOqqVSTepAY7V9NFpRmvF7SVhc7pulO
+        wYgyFe0XfTSNV7kTAw/XorvWDt0P/NF8eSkGZZ9A0bQB5xKMMqkvcwiZd8AsKmYkm1K9QPWvYB6SVq4c
+        Mi9/s1VW/Tduj5pvrRu7lmHT0i9NpP33olfQDZ3Vfqg6v+CJSp4M6bVlQ6k+JIj6vUz11yTMqP78G/8Y
+        JmPG2ZbKae1C8sGRIOP0H9PtaqTXlw1114Wh5+coVBy376i9slytkiehNNPy7jIOeZP1eYlqNhXTDqYY
+        ZjZM6n3AZM4kwmxou4QG2ONJPspeP2XX+Z1TT+YJjQ5dTZ9dVimZcy87YspGasNUbUn193OgF5gKjKmY
+        TZmqmADM753BXUQsA+f/0W9mfdIH7zn/AYT8DhiseGI6ApMrAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="SearchToolStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -272,25 +272,25 @@
   <data name="SearchToolStripButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQNSURBVFhH7ZZtSJtXFMcdrNvoPnSDsYFQ27G3zvqSGN9i
-        Ynwl8xU11ii+MSNGa6xbNHNrV1nHmrXoNtY51nV+aGGz/biVDjboYCD4YYIUi0WLrUqZsLZuo9YkiubJ
-        fkeu0H0a0Rr2oX/4cfPk3uecc889994n6pH+9zIYDLvAlJqaeiAnJ+dQenq6nWdzfHz8s2rI9kiv10fj
-        8Fhubu5UVlbWzby8vKn8/PwxuMbzdfom4WRycvJu9crDk9FotOB4IjMzc66zs/O70dHRU6urq58Fg8ET
-        mqZ9MD4+3oO8BHI1Ozt7Mikpyape3bpSUlIsGJ5ndldx9BVOBxVfwidwnCCOQNf8/HxHQUHBDwT6O0u0
-        9SBY2+fMZvNkRkbG3PT09Oc4+wLOwDcgAXwKXpz3SgBwcGFhwcr4XwjihiybMrU5kfpejPm9Xq84PQ59
-        sBGItP0gGTgK3eAKhUK67u5uA+8umEymPmUqfJH2x6nwCQzdXVxcfF+c4OwjHJyklUCEj+FD+qRfAmim
-        P4b2ed7/jXdnaJ9SJsMT6Y8hjX9R5VMY7IR34CgOjkkgCnHey3/v0brByO+9tNG8d8ZisSxiZ58yGZ4o
-        Ph0zWCosLJzAqBOjh0BmeRhkxrLuknopQPm/iHH7aF+ijSktLT3FjgjImaFMhieq+EUK8B5V/QdGG6AF
-        XPA2eKAH3oW3oAD0EAevShZKSkouk34f50KcMhmeYmNjn0hLS7tVVFS0MjQ01IThanBAq4CTN2lttNm0
-        GZAMCZKFmZmZ18rLy+9J/SQkJDytTIYvsjBotVqDGLvi9/v34OAVkFnKbNNwZqbNgn8FUF1d/XVxcXGQ
-        ZbygTG1OiYmJe9nLfzY3N6/ZbLYLgUDgZZy8DonKYToYIRWSIK69vd3tcDjWpH42XYAPijV0sBt8LS0t
-        wdra2omBgYE3cLQfJAhxKuiHh4dN9fX1l1wul8YO0Dg/+pWJrYsgXKTzvtPp1Nxud7C1tfUOM72Ms/Pw
-        Y1tb26zH41nr6OjQKNwQAWsVFRVLdru9XJnYurhgDDCCcT81EcRxCKcaTkPMXKPiV0j5OGNuw7JkgQB8
-        NTU1PcrEw5GsK3TBWfgJzuHQQ4b2Sz875wWer7OL/Nyg65mgKL8lezvWDURCFO8zOp1ujCB8G0GQiZGq
-        qqpdasj2i8zsZAf9SjaWuMq1ysrKQF1d3SyFvEcN2X7JYUYAF+E+X1BaY2PjKsvxN4GkqCER0WMEcPqB
-        IDSy4GtoaLCp/siIAHphiZNVa2pq0jjc/BxYJ1R3ZEQAhyUIjmkJYD0IsvE9F96Tasj2i0PNCb6ysjLZ
-        HSG+GYRa1R0ZkQU7F92yOOfknJZiVV2RE597R7gvfubEjNzZ8Ej/raiofwDfRcSvZj2+/AAAAABJRU5E
-        rkJggg==
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAQQSURBVFhH7ZZtTJNXFMdZMucyP7glxiUmQ4zbFOSlpbyV
+        lvJeeQ3QSHkno7DCKCJKZfOFqJmdRjejY9mmftBE0Y9u0UQTlywh8cNIzIJhAcKGZhnJ3NgWkbYa6NP9
+        Drkk+GkpSLMP/pNfbp/e+5xz7rnn3vtEvND/XgaDYS2YUlJSdmRnZ+9MS0uz82yOi4t7Qw1ZGen1+g04
+        PJyTkzOamZn5S25u7mheXt5d+InnMfpG4HhSUtJb6pXnJ6PRaMHxcEZGxoPOzs7Lg4ODZ2ZnZ08FAoFj
+        mqYdGhoa6kEeArmXlZU1kpiYaFWvLl/JyckWDE8yu3s4+hKn5xVfwKdwlCD2w57JycmOgoKCbwj0N5Zo
+        +UGwtuvMZvNIenr6g/Hx8dM4+xzOwjmQAD4DD857JQD4YGpqysr47wjiZ1k2ZWppIvW9GPN5PB5xehRO
+        wEIg0p4EycBB6AZXMBjUdXd3G3h3ymQynVCmQhdpf5kKH8bQn9PT0wfECc4+xsFxWglE+ASO0Cf9EkAz
+        /ZG063n/B96doH1VmQxNpD+SNP5NlY9isBP2wkEcHJZAFOK8l/8+ot0NRn5H0W7gvbMWi2UaO1uVydBE
+        8emYwUxhYeEwRp0Y3Qkyy30gM5Z1l9RLAcr/RYzbSruZNrK0tPQMO8IvZ4YyGZqo4k0U4COq+neMNsD7
+        4IIucEMPfAi7oAD0EAvvShZKSkpuk34v50KsMhmaYmJiXklNTf2VDDzt7+9vwnAVOKBVwMl7tDbaLNp0
+        SIJ4ycLExMSW8vLyR1I/8fHxa5TJ0EUWzufn5wcw9qPP59uIg3dAZimzTcWZmTYTngmgqqrq66KiogDL
+        eFWZWpoSEhKi2Mt/NTc3z9lstqt+v/9tnERDgnKYBkZIgUSIbW9v3+1wOOakfpZcgIvFGjrYDd6WlpZA
+        bW3tcF9f33YcbQMJQpwK+oGBAVN9ff11l8ulsQM0zo+TysTyRRAu0vnY6XRqXV1dgdbW1j+Y6W2cXYEb
+        bW1t991u91xHR4dG4QYJWKuoqJix2+3lysTyxQVjgDsY95WVlQVwHMSphtMgM9eo+KekfIgxD+GJZIEA
+        vNXV1T3KxPORrCvsgQtwEy7i0E2Gtkk/O+dNnsfYRT5u0PlMUJSXyN6qeQPhEMX7uk6nuxsdHe1dCIJM
+        3KmsrFyrhqy8yMxr7KDvycYMV7nGLvLX1dXdp5A3qiErLznMCOBbeMwXlNbY2DjLcvxDIMlqSFj0EgF8
+        tSgIraamxtvQ0GBT/eERAfTCjNVq1ZqamjQONx8H1jHVHR4RwD4Jori4WAKYD4KauMaFt1oNWXlxqDnB
+        y1kiuyPIN4NQq7rDI7Jg56J7Is45OcelWFVX+MTn3n7ui1ucmOE7G17ovxUR8S8dU8SUmNqQoAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <metadata name="MainTooltip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
